# backend/src/routes/cartRoutes.js
@@ -1,12 +1,16 @@
-const express = require('express');
+import express from 'express';
+import { getCart, addItemToCart, updateCartItem, removeCartItem } from '../controllers/cartController.js';
+import { protect } from '../middlewares/authMiddleware.js';
+
 const router = express.Router();
-// const cartController = require('../controllers/cartController');
-// const { protect } = require('../middlewares/authMiddleware');
 
 // All cart routes should be protected
-router.get('/', /* protect, cartController.getCart */);
-router.post('/', /* protect, cartController.addItemToCart */);
-router.put('/items/:id', /* protect, cartController.updateCartItem */);
-router.delete('/items/:id', /* protect, cartController.removeCartItem */);
+router.route('/')
+  .get(protect, getCart)
+  .post(protect, addItemToCart);
 
-module.exports = router;
+router.route('/items/:itemId')
+  .put(protect, updateCartItem)
+  .delete(protect, removeCartItem);
+
+export default router;
