# backend/src/routes/wishlistRoutes.js
@@ -1,11 +1,14 @@
-const express = require('express');
+import express from 'express';
+import { getWishlist, addToWishlist, removeFromWishlist } from '../controllers/wishlistController.js';
+import { protect } from '../middlewares/authMiddleware.js';
+
 const router = express.Router();
-// const wishlistController = require('../controllers/wishlistController');
-// const { protect } = require('../middlewares/authMiddleware');
 
-// All wishlist routes should be protected
-router.get('/', /* protect, wishlistController.getWishlist */);
-router.post('/', /* protect, wishlistController.addItemToWishlist */);
-router.delete('/:productId', /* protect, wishlistController.removeItemFromWishlist */);
+router.route('/')
+  .get(protect, getWishlist)
+  .post(protect, addToWishlist);
 
-module.exports = router;
+router.route('/:productId')
+  .delete(protect, removeFromWishlist);
+
+export default router;
